# Rust

./: .gitignore  README.md
Advent of code/trebuchet/src/: main.rs
Snake_game/: .gitignore  Cargo.toml
Snake_game/src/: main.rs
i_like_i_dont_like/: Cargo.toml
i_like_i_dont_like/src/: main.rs
kattis/: README.md
kattis/autori/: Cargo.toml
kattis/autori/src/: main.rs
kattis/bijele/: Cargo.toml  main.rs
kattis/bijele/src/: main.rs
kattis/cetvrta/: Cargo.toml  main.rs
kattis/cetvrta/src/: main.rs
kattis/filip/: Cargo.toml
kattis/filip/src/: main.rs
kattis/hello_world/: Cargo.toml  main.rs
kattis/hello_world/src/: main.rs
kattis/oddities/: Cargo.toml  main.rs
kattis/oddities/src/: main.rs
kattis/quadrant_selection/: Cargo.toml  main.rs
kattis/quadrant_selection/src/: main.rs
src/: main.rs
tetris/: Cargo.toml  config.toml  setup
tetris/src/: block.rs  constants.rs  functions.rs  game.rs  main.rs  tetrimino.rs
