[package]
name = "tetris"
version = "0.1.0"
authors = ["G0rocks <huldarh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rodio = "0.11.0"
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" } # For the window and events and such
file = "1.1.2"