[package]
name = "tetris"
version = "0.1.0"
authors = ["G0rocks <huldarh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rodio = "0.11.0"
piston2d-graphics = "0.41.0"
piston = "0.53.1"    # For the window and events and such
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.79.0"
file = "1.1.2"